# MagicSetEditor2

./: .editorconfig  .gitignore  CHANGES.md  CHANGES.txt  CMakeLists.txt  CMakeSettings.json  MakeAM.sh  Makefile  Makefile.am  Makefile.in  README.md  Resources.sh  aclocal.m4  build-dist  config.status  configure  configure.ac
data/archenemy-forum.mse-export-template/: export-template
data/archenemy-standard.mse-style/: style
data/archenemy.mse-game/: game
data/chs.mse-locale/: locale
data/cht.mse-locale/: locale
data/da.mse-locale/: locale
data/de.mse-locale/: locale
data/en.mse-locale/: locale
data/es.mse-locale/: locale
data/fr.mse-locale/: locale
data/it.mse-locale/: locale
data/jp.mse-locale/: locale
data/magic-blends.mse-include/: blend-scripts  card-backgrounds  card-colors  card-ptboxes  card-textboxes  card-typelines  flip-ptboxes  flip-ptboxes2  include  new-blends
data/magic-counter.mse-style/: style  watermarks
data/magic-default-image.mse-include/: include  scripts
data/magic-embossedletters.mse-symbol-font/: symbol-font
data/magic-extended-art.mse-style/: Thumbs.db  style
data/magic-firepenguinmaster-flip.mse-style/: style
data/magic-firepenguinmaster-planeswalker.mse-style/: style
data/magic-firepenguinmaster.mse-style/: style
data/magic-firepenguinmasterpromo.mse-style/: style
data/magic-firepenguinmastersplit.mse-style/: style
data/magic-firepenguinmastertokens.mse-style/: style
data/magic-forum.mse-export-template/: export-template
data/magic-future-common.mse-include/: include
data/magic-future-split.mse-style/: style
data/magic-future-textless.mse-style/: style
data/magic-future.mse-style/: style
data/magic-futureshift.mse-style/: style
data/magic-mana-beveled.mse-symbol-font/: symbol-font
data/magic-mana-future.mse-symbol-font/: symbol-font
data/magic-mana-large.mse-symbol-font/: symbol-font
data/magic-mana-small-grey.mse-symbol-font/: symbol-font
data/magic-mana-small.mse-symbol-font/: symbol-font
data/magic-new-clear.mse-style/: style
data/magic-new-flip.mse-style/: style
data/magic-new-leveler.mse-style/: style
data/magic-new-planeswalker-4abil.mse-style/: style
data/magic-new-planeswalker.mse-style/: style
data/magic-new-promo.mse-style/: style
data/magic-new-split.mse-style/: style
data/magic-new-textless-land.mse-style/: style
data/magic-new-token-clear.mse-style/: style
data/magic-new-token.mse-style/: style
data/magic-new.mse-style/: style
data/magic-old-promo.mse-style/: style
data/magic-old-split.mse-style/: style
data/magic-old-textless.mse-style/: style
data/magic-old-token.mse-style/: style
data/magic-old.mse-style/: style
data/magic-overlay-foil-normal.mse-include/: include
data/magic-paintbrush.mse-symbol-font/: symbol-font
data/magic-planeshifted-split.mse-style/: style
data/magic-planeshifted.mse-style/: style
data/magic-spoiler.mse-export-template/: export-template  script.js  style.css
data/magic-textless.mse-style/: style
data/magic-watermarks-180.mse-include/: include  watermarks
data/magic-watermarks.mse-include/: include  watermark-names  watermarks  watermarks-old
data/magic.mse-game/: add_cards_scripts  auto_replace  card_fields  game  keywords  language  magic-words.en_US.dic  magic-words.en_us.dic  packs  script  set_fields  statistics  word_lists
data/pl.mse-locale/: locale
data/planechase-forum.mse-export-template/: export-template
data/planechase-standard.mse-style/: style
data/planechase.mse-game/: game
data/pt-br.mse-locale/: locale
data/sp.mse-locale/: locale
data/vanguard-forum.mse-export-template/: export-template
data/vanguard-standard.mse-style/: style
data/vanguard.mse-game/: game
data/vs-alter.mse-style/: style
data/vs-common.mse-include/: affiliations  dual-affiliation  include  old-to-new  watermark-names  watermarks
data/vs-extended-art.mse-style/: style
data/vs-extended-hellboy.mse-style/: style
data/vs-hellboy.mse-style/: style
data/vs-insanity.mse-style/: style
data/vs-new.mse-style/: style
data/vs-oversize.mse-style/: style
data/vs-spoiler.mse-export-template/: export-template  script.js  style.css
data/vs-standard-arrow.mse-symbol-font/: symbol-font
data/vs-standard-new.mse-symbol-font/: symbol-font
data/vs-standard-official.mse-symbol-font/: symbol-font
data/vs-standard.mse-style/: style
data/vs.mse-game/: auto_replace  card_fields  game  keywords  packs  script  set_fields  statistics  word_lists
data/yugioh-forum.mse-export-template/: export-template
data/yugioh-standard-levels.mse-symbol-font/: symbol-font
data/yugioh-standard.mse-style/: style
data/yugioh-text-replacements.mse-symbol-font/: symbol-font
data/yugioh.mse-game/: auto_replace  card_fields  game  packs  script  set_fields  word_lists
doc/: README  index.txt
doc/about/: index.txt  license.txt
doc/cli/: cli.txt  index.txt
doc/file/: format.txt  index.txt  package.txt  style_triangle.txt
doc/function/: abs.txt  assert.txt  break_text.txt  built_in_image.txt  check_spelling.txt  chosen.txt  combine_blend.txt  combined_editor.txt  contains.txt  copy_file.txt  count_chosen.txt  crop.txt  curly_quotes.txt  drop_shadow.txt  english_number.txt  english_plural.txt  enlarge.txt  error.txt  exclusive_choice.txt  expand_keywords.txt  filter_list.txt  filter_text.txt  flip_horizontal.txt  flip_vertical.txt  format.txt  get_card_styling.txt  index.txt  invert.txt  invert_image.txt  keyword_usage.txt  length.txt  linear_blend.txt  masked_blend.txt  match.txt  new_card.txt  number_of_items.txt  overlay.txt  position.txt  primary_choice.txt  process_english_hints.txt  (+49 more)
doc/script/: best_practices.txt  control_structures.txt  default_arguments.txt  functions.txt  index.txt  introduction.txt  operators.txt  (+3 more)
resource/: expected_locale_keys  win32_res.rc
src/: code_template.cpp  code_template.hpp  config.h.in  config.hpp.in  main.cpp  mse.sln  mse.vc71.sln  mse.vc71.vcproj  mse.vcproj  win32-cli-wrapper.vc71.vcproj  win32-cli-wrapper.vcproj
test/: tests.cmake
tools/: gen.pl
(+450 files in other folders)
